[package]
name = "dom_testing_library"
version.workspace = true
edition.workspace = true

[target.wasm32-unknown-unknown]
runner = 'wasm-bindgen-test-runner'

[dependencies]
thiserror = "1.0.56"
wasm-bindgen = { workspace = true }
web-sys= {version="0.3.0",features=["HtmlCollection","NodeList","Window",
    "HtmlElement","Document","HtmlLabelElement","HtmlTextAreaElement","HtmlInputElement","HtmlSelectElement"]}

[dev-dependencies]
wasm-bindgen-test = { workspace = true }
console_error_panic_hook = "0.1.7"

[features]
# my vscode rust analyzer needs this and I don't know why.
leptos=[]