[package]
name = "leptos_test"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "leptos_test is a lightweight testing crate built on top of dom_testing_library a wasm based front end testing toolkit."
[dependencies]
leptos = { version = "0.6.0-beta" }
wasm-bindgen = { workspace = true }
wasm-bindgen-test = { workspace = true }
dom_testing_library = { workspace = true }
web-sys= {version="0.3.0",features=["Document"]}
